--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.0.5",
     "next": "14.0.4",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.0"
