--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "@nextui-org/react": "^2.2.9",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.0.5",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-auth": "^4.24.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
