--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@nextui-org/react": "^2.2.9",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.0.5",
+    "mongoose": "^8.3.2",
+    "mongoose-unique-validator": "^5.0.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18.2.0",
